trying to fix text not aligning bug

--- a/css/projects.css
+++ b/css/projects.css
@@ -56,7 +56,8 @@ img{
     }
     
     p {
-        padding-left: 0.8rem;
+        text-align: center;
+        padding: 0 0 0 0;
         max-width: 90%; /* Narrower width for readability on small screens */
         line-height: 1.4rem;
     }
@@ -78,7 +79,8 @@ img{
     }
     
     p {
-        padding-left: 0.8rem;
+        text-align: center;
+        padding: 0 0 0 0;
         max-width: 85%; /* Narrower for smaller screens */
     }
     
@@ -98,7 +100,8 @@ img{
     }
 
     p {
-        padding-left: 0.8rem;
+        text-align: center;
+        padding: 0 0 0 0;
         line-height: 1.4rem;
     }
 }
